--- a/index.html
+++ b/index.html
@@ -7,12 +7,10 @@
  <link rel="stylesheet" href="styles.css">
  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@900&display=swap">
 </head>
-
-
-
 <body>
+     <div class="wrapper">
      <header class="header">
-           <div class="logo">app.creation</div>
+           <div class="logo">app.creation</div><!-- -->
            <nav class="menu">
                   <a class="menu__item" href="#">start</a>
                   <a class="menu__item" href="#">services</a>
@@ -32,7 +30,7 @@
            </main>
            <div class="image-content">
                  <img class="image-content__image" src="" alt="">
+     </section>
            </div>
-    </section>
 </body>
 </html>
