--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
 <head>
  <meta charset="utf-8">
  <title>app.creation</title>
+ <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@900&display=swap" rel="stylesheet">
+ <link rel="stylesheet" href="fonts.css">
  <link rel="stylesheet" href="styles.css">
- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto:wght@900&display=swap">
 </head>
 <body>
      <div class="wrapper">
      <header class="header">
-           <div class="logo">app.creation</div><!-- -->
+          <div class="logo">
+            <div class="logo__circle logo__circle_color_dark_blue"></div>
+            <div class="logo__circle logo__circle_color_blue"></div>
+            app.creation
+          </div>
            <nav class="menu">
                   <a class="menu__item" href="#">start</a>
                   <a class="menu__item" href="#">services</a>
